# Chimp

./: COMPILING.md  LICENSE  README.md
Chimp/ChimpEditor/: CMakeLists.txt  ChimpEditorSources.cmake
Chimp/ChimpEditor/Data/Assets/Models/: Cube.mtl
Chimp/ChimpEditor/Source/: EditorScene.cpp  EditorScene.h  Logger.h  Main.cpp  stdafx.h
Chimp/ChimpEditor/Source/asset_manager/: AssetManagerScript.cpp
Chimp/ChimpEditor/Source/assets/: AssetImporterScript.cpp  AssetImporterScript.h  AssetManagerScript.cpp  AssetManagerScript.h
Chimp/ChimpEditor/Source/inspector/: InspectorScript.cpp  InspectorScript.h
Chimp/ChimpEditor/Source/scene_hierarchy/: EntityNameComponent.h  SceneHierarchyScript.cpp  SceneHierarchyScript.h
Chimp/ChimpEditor/Source/scene_view/: SceneViewScript.cpp  SceneViewScript.h
Chimp/ChimpFramework/: CMakeLists.txt  ChimpFrameworkSources.cmake  CopyDLLs.cmake
Chimp/ChimpFramework/ChimpData/Assets/Shaders/: Lit.vert  LitPointShadow.vert
Chimp/ChimpFramework/Data/Assets/Shaders/: Lit.frag  LitPointShadow.frag  LitPointShadow.geom
Chimp/ChimpFramework/Source/: Chimp.h  Loggers.h  Main.cpp  Main.h  stdafx.h
Chimp/ChimpFramework/Source/api/: Engine.h  IGame.h
Chimp/ChimpFramework/Source/api/audio/: AudioFormat.h  IAudioImporter.h  IPlayingAudio.h  ISound.h
Chimp/ChimpFramework/Source/api/ecs/: Components.h  ECS.h  EntityId.h  ISystem.h  RegisterComponents.h  SystemContainerSystem.h
Chimp/ChimpFramework/Source/api/graphics/: GameShader.h  GraphicsType.h  IRenderer.h  IRenderingManager.h  PrimitiveType.h
Chimp/ChimpFramework/Source/api/imgui/: ImGuiHandler.h  ImGuiMacros.h
Chimp/ChimpFramework/Source/api/networking/: IServer.h  PacketTypeRegistry.h
Chimp/ChimpFramework/Source/api/resources/: IModelImporter.h  MeshStorage.h  Resource.h  ResourceContainer.h  ResourceDependency.h  ResourceManager.h  ResourceReference.h
Chimp/ChimpFramework/Source/api/scenes/: SceneManager.h
Chimp/ChimpFramework/Source/api/threading/: ThreadPool.h
Chimp/ChimpFramework/Source/api/time/: TimeManager.h  Timer.h
Chimp/ChimpFramework/Source/api/utils/: AnyReference.h  ByteVisualiser.h  FilePath.h  HashCombine.h  ImGuiHelper.h  InPlaceOptional.h  Json.h  Maths.h  OptionalReference.h  StringUtils.h  TaskScheduler.h  TupleUtils.h  TypeInfo.h  UnorderedCollection.h  UnorderedPossiblyUniqueCollection.h
Chimp/ChimpFramework/Source/api/window/: IWindow.h  InputManager.h  Keys.h
Chimp/ChimpFramework/Source/impl/: Engine.cpp  IGame.cpp  MainLoop.cpp  MainLoop.h
Chimp/ChimpFramework/Source/impl/audio/: AudioManager.cpp
Chimp/ChimpFramework/Source/impl/ecs/: ECS.cpp  SystemContainerSystem.cpp
Chimp/ChimpFramework/Source/impl/imgui/: ImGuiHandler.cpp  ImGuiHelper.cpp
Chimp/ChimpFramework/Source/impl/logging/: Logger.cpp
Chimp/ChimpFramework/Source/impl/networking/: IClient.cpp
Chimp/ChimpFramework/Source/impl/resources/: MeshStorage.cpp  ResourceManager.cpp  ResourceReference.cpp
Chimp/ChimpFramework/Source/impl/scenes/: SceneManager.cpp
Chimp/ChimpFramework/Source/impl/threading/: ThreadPool.cpp
Chimp/ChimpFramework/Source/impl/time/: TimeManager.cpp
Chimp/ChimpFramework/Source/impl/utils/: AnyReference.cpp  ByteVisualiser.cpp  FilePath.cpp  FileReader.cpp  ImGuiHelper.cpp  Maths.cpp  NotNullHack.h  RawArray.cpp  StringUtils.cpp
Chimp/ChimpFramework/Source/impl/window/: WindowGLFW.h
Chimp/ChimpFramework/src/: Loggers.h
Chimp/ChimpFramework/src/api/audio/: IAudio.h
Chimp/ChimpFramework/src/api/networking/: EventHandler.h  PacketResponseFunc.h
Chimp/ChimpFramework/src/api/resources/: ResourcePaths.h
Chimp/ChimpFramework/src/api/scenes/: Scene.h
Chimp/ChimpFramework/src/api/utils/: FilePath.h  RawArray.h
Chimp/ChimpFramework/src/impl/networking/: IServer.cpp
Chimp/ChimpFramework/src/impl/time/: Timer.cpp
Chimp/ChimpFramework/src/impl/utils/: TaskScheduler.cpp
Chimp/ChimpGame/: CMakeLists.txt  ChimpGameSources.cmake
Chimp/ChimpGame/Data/: Settings.yml  ecs.json
Chimp/ChimpGame/Data/Assets/Models/: teapot.mtl
Chimp/ChimpGame/Data/assets/Shaders/: Default.frag  Default.vert
Chimp/ChimpGame/Data/assets/music/: references.txt
Chimp/ChimpGame/Data/assets/sounds/: bloon.yml  place.yml
Chimp/ChimpGame/Data/maps/: Lava.yml  Maps.yml  Meadows.yml
Chimp/ChimpGame/Source/: EntryScene.cpp  Game.cpp  Game.h  GameMain.cpp  Logger.h  MainScene.cpp  MainScene.h  TestClass.cpp  TestClass.h  TestScript.h  stdafx.h
Chimp/ChimpGame/src/: Debug.h  EntryScene.cpp  EntryScene.h  GameMain.cpp  stdafx.h
Chimp/ChimpGame/src/entities/: BaseEntity.h  BloonsEntities.cpp  BloonsEntities.h  NetworkedIdentifierComponent.cpp  NetworkedIdentifierComponent.h
Chimp/ChimpGame/src/entities/bloons/: BloonComponent.h  MoveableComponent.h
Chimp/ChimpGame/src/entities/health/: HealthSystem.h
Chimp/ChimpGame/src/entities/towers/: MonkeyTowerComponent.cpp  MonkeyTowerComponent.h  TowerComponent.h  TowerTypes.h  UpgradableComponent.h  WorthComponent.h
Chimp/ChimpGame/src/game/: Entities.h  GameScene.cpp  GameScene.h  MoneyManager.cpp  MoneyManager.h  Simulation.cpp  Simulation.h
Chimp/ChimpGame/src/game/bloons/: BloonManager.cpp  BloonManager.h  BloonSpawner.cpp  BloonSpawner.h
Chimp/ChimpGame/src/game/match_end/: MatchWinLoseHandler.cpp  MatchWinLoseHandler.h
Chimp/ChimpGame/src/game/towers/: TowerEditor.cpp  TowerEditor.h  TowerManager.cpp  TowerManager.h
Chimp/ChimpGame/src/game/waves/: GameWave.cpp  GameWave.h  WaveManagerBuilder.h  WaveStartHandler.cpp  WaveStartHandler.h
Chimp/ChimpGame/src/gameover/: GameOverScene.cpp  GameOverScene.h
Chimp/ChimpGame/src/menu/: MenuScene.cpp  MenuScene.h  Settings.cpp  Settings.h
Chimp/ChimpGame/src/networking/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Networking.h
Chimp/ChimpGame/src/networking/client/: BloonListener.cpp  BloonListener.h  ClientCurrentMatchHandler.cpp  ClientCurrentMatchHandler.h  GameWinListener.cpp  GameWinListener.h  TowerListener.cpp  (+3 more)
Chimp/ChimpRuntime/: .gitignore  CMakeLists.txt  ChimpRuntimeSources.cmake
Chimp/ChimpRuntime/Source/: Main.cpp
(+329 files in other folders)
